--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.tfstate
 *.tfstate.backup
 .terraform/
-.terraform.lock.hcl
+#.terraform.lock.hcl
 
 # AWS keys or credentials (NEVER commit these)
 *.pem
